--- a/assets/css/recipe.css
+++ b/assets/css/recipe.css
@@ -1,6 +1,12 @@
-.card-image{
+body{
+  padding: 20px;
+}
+/* .card-image{
     height: 500px;
     width: 500px;
+} */
+nav{
+
 }
 
 .card{
@@ -53,12 +59,33 @@
 
 }
 
+#contact{
+  position: relative;
+  left: 800px;
+  top: -300px;
+}
+
+#social-media{
+  position: relative;
+  right: -900px;
+  top: -2850px;
+  /* top: -3650px; */
+
+}
+
+#headerImage{
+  width: 800px;
+  padding-top: 25px;
+}
 
 
 /* SOCIAL MEDIA CSS */
 .resp-sharing-button__link,
 .resp-sharing-button__icon {
-  display: inline-block
+  display: inline-block;
+  position: relative;
+
+
 }
 
 .resp-sharing-button__link {
@@ -107,14 +134,6 @@
   background-color: #2795e9
 }
 
-.resp-sharing-button--pinterest {
-  background-color: #bd081c
-}
-
-.resp-sharing-button--pinterest:hover {
-  background-color: #8c0615
-}
-
 .resp-sharing-button--facebook {
   background-color: #3b5998
 }
@@ -123,29 +142,6 @@
   background-color: #2d4373
 }
 
-.resp-sharing-button--tumblr {
-  background-color: #35465C
-}
-
-.resp-sharing-button--tumblr:hover {
-  background-color: #222d3c
-}
-
-.resp-sharing-button--reddit {
-  background-color: #5f99cf
-}
-
-.resp-sharing-button--reddit:hover {
-  background-color: #3a80c1
-}
-
-.resp-sharing-button--google {
-  background-color: #dd4b39
-}
-
-.resp-sharing-button--google:hover {
-  background-color: #c23321
-}
 
 .resp-sharing-button--linkedin {
   background-color: #0077b5
@@ -155,42 +151,6 @@
   background-color: #046293
 }
 
-.resp-sharing-button--email {
-  background-color: #777
-}
-
-.resp-sharing-button--email:hover {
-  background-color: #5e5e5e
-}
-
-.resp-sharing-button--xing {
-  background-color: #1a7576
-}
-
-.resp-sharing-button--xing:hover {
-  background-color: #114c4c
-}
-
-.resp-sharing-button--whatsapp {
-  background-color: #25D366
-}
-
-.resp-sharing-button--whatsapp:hover {
-  background-color: #1da851
-}
-
-.resp-sharing-button--hackernews {
-background-color: #FF6600
-}
-.resp-sharing-button--hackernews:hover, .resp-sharing-button--hackernews:focus {   background-color: #FB6200 }
-
-.resp-sharing-button--vk {
-  background-color: #507299
-}
-
-.resp-sharing-button--vk:hover {
-  background-color: #43648c
-}
 
 .resp-sharing-button--facebook {
   background-color: #3b5998;
@@ -212,48 +172,4 @@ background-color: #FF6600
 .resp-sharing-button--twitter:active {
   background-color: #2795e9;
   border-color: #2795e9;
-}
-
-.resp-sharing-button--google {
-  background-color: #dd4b39;
-  border-color: #dd4b39;
-}
-
-.resp-sharing-button--google:hover,
-.resp-sharing-button--google:active {
-  background-color: #c23321;
-  border-color: #c23321;
-}
-
-.resp-sharing-button--tumblr {
-  background-color: #35465C;
-  border-color: #35465C;
-}
-
-.resp-sharing-button--tumblr:hover,
-.resp-sharing-button--tumblr:active {
-  background-color: #222d3c;
-  border-color: #222d3c;
-}
-
-.resp-sharing-button--email {
-  background-color: #777777;
-  border-color: #777777;
-}
-
-.resp-sharing-button--email:hover,
-.resp-sharing-button--email:active {
-  background-color: #5e5e5e;
-  border-color: #5e5e5e;
-}
-
-.resp-sharing-button--pinterest {
-  background-color: #bd081c;
-  border-color: #bd081c;
-}
-
-.resp-sharing-button--pinterest:hover,
-.resp-sharing-button--pinterest:active {
-  background-color: #8c0615;
-  border-color: #8c0615;
 }
