--- a/assets/css/recipe.css
+++ b/assets/css/recipe.css
@@ -62,7 +62,7 @@ nav{
 #contact{
   position: relative;
   left: 800px;
-  top: -300px;
+  top: -290px;
 }
 
 #social-media{
@@ -76,6 +76,11 @@ nav{
 #headerImage{
   width: 800px;
   padding-top: 25px;
+}
+
+#media-button{
+  right: -850px;
+  top: 75px;
 }
 
 
