--- a/assets/css/recipe.css
+++ b/assets/css/recipe.css
@@ -54,6 +54,12 @@ nav{
     width: 500px;
     height: 500px;
 }
+
+.card5{
+  left: 145px;
+  top:-400px;
+  position: relative;
+}
 .btn{
     width: 150px;
 
@@ -77,11 +83,19 @@ nav{
   width: 800px;
   padding-top: 25px;
 }
-
+/* Puts media buttons in the white space */
 #media-button{
-  right: -850px;
-  top: 75px;
+  position: relative;
+  right: -1125px;
+  top: -310px;
 }
+
+/* Puts media buttons on the nav bar */
+/* #media-button{
+  position: relative;
+  right: -1125px;
+  top: -390px;
+} */
 
 
 /* SOCIAL MEDIA CSS */
