updated html, boxes almost where they need

--- a/assets/css/recipe.css
+++ b/assets/css/recipe.css
@@ -1,6 +1,9 @@
 body{
   padding: 20px;
+  margin: auto 0;
+
 }
+
 /* .card-image{
     height: 500px;
     width: 500px;
@@ -60,6 +63,18 @@ nav{
   top:-400px;
   position: relative;
 }
+
+.card2{
+  position: relative;
+  bottom:-320px;
+  left: -765px;
+  
+}
+.card4{
+  position: relative;
+  right: -800px;
+  
+}
 .btn{
     width: 150px;
 
@@ -69,6 +84,14 @@ nav{
   position: relative;
   left: 800px;
   top: -290px;
+}
+#contactUs{
+  position: relative;
+  left: 800px;
+  top: -290px;
+  padding-right: 0px;
+  margin: 0px;
+  width: 100px;
 }
 
 #social-media{
