Html changed and redone compeletly. id's added as well. Javascript does not work on this version.

--- a/assets/css/recipe.css
+++ b/assets/css/recipe.css
@@ -1,175 +1,16 @@
 body{
   padding: 20px;
-}
- .card-image{
-    height: 500px;
-    width: 500px;
-} 
-nav{
-
-}
-
-.card{
-    width: 500px;
-}
-
-#card1{
-    bottom: -500px;
-    
-}
-#card2{
-    position: relative;
-    bottom: -600px;
-    left: -785px;
-    width: 500px;
-}
-#card3{
-    position: relative;
-    bottom: -200px
-    
-}
-#card6{
-    position: relative;
-    bottom: -200px;
-    float: left;
-    
-}
-#card7{
-    position: relative;
-    bottom: -200px;
-    float: left;
-    
-}
-#card4{
-    position: relative;
-    right: -785px;
-    top: -608px;
-    width: 500px;
-    
-    
-}
-#card5{
-   position: relative;
-    top: -1200px;
-    width: 500px;
-    height: 500px;
-}
-.btn{
-    width: 150px;
-
-}
-
-#contact{
-  position: relative;
-  left: 800px;
-  top: -300px;
-}
-
-#social-media{
-  position: relative;
-  right: -900px;
-  top: -2850px;
-  top: -3650px
-
+  margin: auto 0;
 }
 
 #headerImage{
-  width: 800px;
-  padding-top: 25px;
+  width: 900px;
+  
 }
 
-
-/* SOCIAL MEDIA CSS */
-.resp-sharing-button__link,
-.resp-sharing-button__icon {
-  display: inline-block;
-  position: relative;
+/* #informationCard {
+  position: relative; 
+  right: -800px;
+} */
 
 
-}
-
-.resp-sharing-button__link {
-  text-decoration: none;
-  color: #fff;
-  margin: 0.5em
-}
-
-.resp-sharing-button {
-  border-radius: 5px;
-  transition: 25ms ease-out;
-  padding: 0.5em 0.75em;
-  font-family: Helvetica Neue,Helvetica,Arial,sans-serif
-}
-
-.resp-sharing-button__icon svg {
-  width: 1em;
-  height: 1em;
-  margin-right: 0.4em;
-  vertical-align: top
-}
-
-.resp-sharing-button--small svg {
-  margin: 0;
-  vertical-align: middle
-}
-
-/* Non solid icons get a stroke */
-.resp-sharing-button__icon {
-  stroke: #fff;
-  fill: none
-}
-
-/* Solid icons get a fill */
-.resp-sharing-button__icon--solid,
-.resp-sharing-button__icon--solidcircle {
-  fill: #fff;
-  stroke: none
-}
-
-.resp-sharing-button--twitter {
-  background-color: #55acee
-}
-
-.resp-sharing-button--twitter:hover {
-  background-color: #2795e9
-}
-
-.resp-sharing-button--facebook {
-  background-color: #3b5998
-}
-
-.resp-sharing-button--facebook:hover {
-  background-color: #2d4373
-}
-
-
-.resp-sharing-button--linkedin {
-  background-color: #0077b5
-}
-
-.resp-sharing-button--linkedin:hover {
-  background-color: #046293
-}
-
-
-.resp-sharing-button--facebook {
-  background-color: #3b5998;
-  border-color: #3b5998;
-}
-
-.resp-sharing-button--facebook:hover,
-.resp-sharing-button--facebook:active {
-  background-color: #2d4373;
-  border-color: #2d4373;
-}
-
-.resp-sharing-button--twitter {
-  background-color: #55acee;
-  border-color: #55acee;
-}
-
-.resp-sharing-button--twitter:hover,
-.resp-sharing-button--twitter:active {
-  background-color: #2795e9;
-  border-color: #2795e9;
-}
