--- a/assets/css/recipe.css
+++ b/assets/css/recipe.css
@@ -2,6 +2,7 @@ body{
   padding: 20px;
   font-family: Helvetica;
   align-content: center;
+  background-color: #0D0D0D;
 }
 
 #headerImage{
@@ -9,8 +10,8 @@ body{
 }
 
 #cakeButton{
-  margin-left: 50px;
-  margin-bottom: 20px;
+  margin-right: -15px;
+  margin-bottom: 25px;
   overflow: auto !important;
 }
 
@@ -48,6 +49,11 @@ body{
     /* margin-top: 20px; */
     padding-bottom: 10px;
     padding-top:10px;
+    
+}
+
+#outerUploadCard{
+  
 }
 
 
@@ -55,23 +61,24 @@ body{
 #outerCarouselDiv {
   padding-bottom: 95px;
   padding-top: 10px;
+  
 }
 
 
 #outerCakeDiv{
   padding-bottom:53px;
-  /* background-color: black; */
+  background-color: #F0B254;
 }
 
 
 #outerSpaghettiDiv{
   padding-bottom: 53px;
-  /* background-color: black; */
+  background-color: #F0B254;
 }
 
 #outerAlfredoDiv{
   padding-bottom: 53px;
-  /* background-color: black; */
+  background-color: #F0B254;
 }
 
 #sourceImage{
@@ -79,25 +86,9 @@ body{
   width: 700px;
 }
 
-/* #cakeButton{
-  overflow: hidden;
-} */
 
-
-
-
-
-
-
-  /* position: relative; 
-  right: -900px;
-  top: -410px;
-} */
-
-/* .bigger {
-  height: 200%;
-  width: 200%;
-  padding: 20px;
-} */
+#informationCard{
+background-color: #F0B254;
+}
 
 
